SAM-2146: Selecting "No feedback" doesn't uncheck feedback components when a template is used
git-svn-id: https://source.sakaiproject.org/svn/sam/trunk@133525 66ffb92e-73f9-0310-93c1-f5514f145a0a